--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,90 @@
-spring.application.name=dongbanza
+spring:
+
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+    open-in-view: false
+
+  mvc:
+    path match:
+      matching-strategy: ant_path_matcher
+
+  data:
+    redis:
+      port: 6379
+      host: 220.85.169.165
+
+    mongodb:
+      username: ${MONGO_USERNAME} #root
+      password: ${MONGO_PASSWORD} # root
+      host: ${MONGO_HOST} #220.85.169.165
+      port: ${MONGO_PORT} #27017
+      database: ${MONGO_DATABASE} #chat
+      authentication-database: admin
+
+  datasource:
+    url: ${MARIA_URL} #jdbc:mariadb://localhost:3308/samcomo
+    username: ${MARIA_USERNAME} #samcomo
+    password: ${MARIA_PASSWORD} #samcomo
+    driver-class-name: org.mariadb.jdbc.Driver
+
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+  jwt:
+    secret: NulVADBtpXoUKTkzWFr+rCc5ckITa+A6uaLcZ9btLgg=
+
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          google:
+#            client-name: google
+#            client-id: ${GOOGLE_CLIENT_ID} #212547587168-l87h9u4c4c6rq52g6e74dvafo15a2q61.apps.googleusercontent.com
+#            client-secret: ${GOOGLE_CLIENT_SECRET} #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
+#            redirect-uri: http://localhost:8080/login/oauth2/code/google
+#            authorization-grant-type: authorization_code
+#            scope:
+#              - email
+#              - profile
+
+cloud:
+  aws:
+    credentials:
+      instance-profile: true
+      secret-key: ${AWS_SECRET_KEY} # AWS S3 secret-key
+      access-key: ${AWS_ACCESS_KEY} # AWS S3 access-key
+    region:
+      static: ap-northeast-2
+      auto: false
+    stack:
+      auto: false
+    s3:
+      bucket: ${AWS_BUCKET} #samcomo
+
+logging:
+  level:
+    org:
+      springframework:
+        transaction:
+          interceptor: trace
+
+#fcm:
+#  key:
+#    path: firebase/firebase-adminsdk.json
+#    scope: https://www.googleapis.com/auth/cloud-platform
+#  api:
+#    url: https://fcm.googleapis.com/v1/projects/${FCM-PROJECT-ID}/messages:send
+
+springdoc:
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
+  swagger-ui:
+    path: /docs/swagger
