feat(member): 회원 관리 기능 구현
- MemberController에 회원 가입 ,로그인 API 추가

- MemberService : 회원 가입 , 로그인 로직 구현

- Member관련 DTO 설정: MemberDto, MemberLoginResponse

- Member Domain에서 사용자 인증 정보 제공 부분 삭제 -> 기본 엔티티 속성으로 변경 UserDetails는 따로 Custum으로 관리함

- MemberStatus, MemberRole 열거형: 회원 상태 , 역할 관리

MemberLoginForm 및 MemberSignUpForm 클래스를 통해 API 요청 데이터 검증 및 수집

- JWT 토큰 생성 로직은 향후 추가 구현 예정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,7 @@ spring:
       max-request-size: 10MB
 
   jwt:
+    expiration_time: 86400000
     secret: NulVADBtpXoUKTkzWFr+rCc5ckITa+A6uaLcZ9btLgg=
 
 #  security:
@@ -71,10 +72,8 @@ cloud:
 
 logging:
   level:
-    org:
-      springframework:
-        transaction:
-          interceptor: trace
+    org.springframework.web: DEBUG
+    org.springframework.security: DEBUG
 
 #fcm:
 #  key:
