--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,17 +17,17 @@ spring:
       matching-strategy: ant_path_matcher
 
   data:
-    redis:
-      port: 6379
-      host: ${REDIS_HOST}
+#    redis:
+#      port: 6379
+#      host: ${REDIS_HOST}
 
-    mongodb:
-      username: ${MONGODB_USERNAME}
-      password: ${MONGODB_PASSWORD}
-      host: ${MONGODB_HOST}
-      port: 27017
-      database: ${MONGODB_DATABASE}
-      authentication-database: admin
+#    mongodb:
+#      username: ${MONGODB_USERNAME}
+#      password: ${MONGODB_PASSWORD}
+#      host: ${MONGODB_HOST}
+#      port: 27017
+#      database: ${MONGODB_DATABASE}
+#      authentication-database: admin
 
   datasource:
     url: jdbc:mariadb://${DB_HOST}:3306/${DB_NAME}
@@ -35,29 +35,29 @@ spring:
     password: ${DB_PASSWORD}
     driver-class-name: org.mariadb.jdbc.Driver
 
-  servlet:
-    multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
+#  servlet:
+#    multipart:
+#      max-file-size: 10MB
+#      max-request-size: 10MB
 
   jwt:
     secret-key: ${JWT_SECRET_KEY}
-    access-expiration-time: 86400000
-    refresh-expiration-time: 864000000
+    access-expiration-time: 600000  # 10분 = 10 * 60 * 1000 밀리초
+    refresh-expiration-time: 604800000  # 7일 = 7 * 24 * 60 * 60 * 1000 밀리초
 
-cloud:
-  aws:
-    credentials:
-      instance-profile: true
-      secret-key: ${AWS_SECRET_KEY}
-      access-key: ${AWS_ACCESS_KEY}
-    region:
-      static: ap-northeast-2
-      auto: false
-    stack:
-      auto: false
-    s3:
-      bucket: ${AWS_BUCKET}
+#cloud:
+#  aws:
+#    credentials:
+#      instance-profile: true
+#      secret-key: ${AWS_SECRET_KEY}
+#      access-key: ${AWS_ACCESS_KEY}
+#    region:
+#      static: ap-northeast-2
+#      auto: false
+#    stack:
+#      auto: false
+#    s3:
+#      bucket: ${AWS_BUCKET}
 
 logging:
   level:
