feat(logs): prometheus 모니터링 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,3 +71,16 @@ springdoc:
     path: /docs/swagger
   api-docs:
     path: /v3/api-docs
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+  endpoint:
+    prometheus:
+      enabled: true
