fixed(logs): 프로메테우스 주소수정 yml 파일 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,4 +76,8 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus
+        include: "prometheus"
+  prometheus:
+    metrics:
+      export:
+        enabled: true
