fixed(logs): 프로메테우스 yml 파일 변경

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ out/
 ### CICD ####
 ./.github/workflows
 .github/workflows/BACKEND-CICD.yaml
+.github/workflows/BACKEND-CICD.yaml
+/.github/workflows
