--- a/.github/workflows/BACKEND-CICD.yaml
+++ b/.github/workflows/BACKEND-CICD.yaml
@@ -8,13 +8,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -35,18 +35,18 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/bagel-back-container:latest
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/bagel-back-container:cache
-          cache-to: type=inline
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/bagel-back-container:cache,mode=max
 
   deploy:
     needs: build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Deploy
         uses: appleboy/ssh-action@v1.0.3
@@ -56,15 +56,16 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           port: 2022
           script: |
-            export PATH=$PATH:/usr/local/bin
-            export PW=${{ secrets.SERVER_PASSWORD }}
-            echo $PW | sudo -S docker pull ${{ secrets.DOCKERHUB_USERNAME }}/bagel-back-container:latest
-            echo $PW | sudo -S docker stop bagel-back || true
-            echo $PW | sudo -S docker rm bagel-back || true
-            echo $PW | sudo -S docker run -d -p 8093:8080 --name bagel-back \
+            # Get current Seoul time (KST, UTC+9)
+            SEOUL_TIME=$(TZ='Asia/Seoul' date '+%Y-%m-%d %H:%M:%S')
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/bagel-back-container:latest
+            docker stop bagel-back || true
+            docker rm bagel-back || true
+            docker run -d -p 8093:8080 --name bagel-back \
               -e DB_HOST=${{ secrets.DB_HOST }} \
               -e DB_NAME=${{ secrets.DB_NAME }} \
               -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
               -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
               -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
+              -e SEOUL_TIME="$SEOUL_TIME" \
               ${{ secrets.DOCKERHUB_USERNAME }}/bagel-back-container:latest
