chore(yml): gitignore yml 추가 및 PG 추가

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ out/
 .github/workflows/BACKEND-CICD.yaml
 .github/workflows/BACKEND-CICD.yaml
 /.github/workflows
+
+### YML
+./src/main/resources/application.yml
