--- a/build.gradle
+++ b/build.gradle
@@ -22,42 +22,34 @@ repositories {
 }
 
 dependencies {
-    // springBoot web, JPA
+    // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-    // security
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // 테스트
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    // swagger
+    // Swagger/OpenAPI
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
-    // lombok
+    // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    // validation
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // PostgreSQL
+    runtimeOnly 'org.postgresql:postgresql:42.7.3'   // 버전은 최신 안정판으로
 
-    // maria DB
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-
-//    // mongo DB
-//    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-
-    // AWS
-    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-
-    // jwt
+    // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 
-    // prometheus
-    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+    // Prometheus & Actuator
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.named('test') {
