--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,14 @@ server:
   port: 8080
 
 spring:
+  datasource:
+    url: jdbc:postgresql://${DB_HOST}:5430/${DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
   jpa:
+    open-in-view: false
     generate-ddl: true
     hibernate:
       ddl-auto: update
@@ -10,54 +17,25 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
-    open-in-view: false
 
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
 
-  data:
-#    redis:
-#      port: 6379
-#      host: ${REDIS_HOST}
-
-#    mongodb:
-#      username: ${MONGODB_USERNAME}
-#      password: ${MONGODB_PASSWORD}
-#      host: ${MONGODB_HOST}
-#      port: 27017
-#      database: ${MONGODB_DATABASE}
-#      authentication-database: admin
-
-  datasource:
-    url: jdbc:mariadb://${DB_HOST}:3306/${DB_NAME}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-    driver-class-name: org.mariadb.jdbc.Driver
-
-#  servlet:
-#    multipart:
-#      max-file-size: 10MB
-#      max-request-size: 10MB
-
   jwt:
     secret-key: ${JWT_SECRET_KEY}
-    access-expiration-time: 600000  # 10분 = 10 * 60 * 1000 밀리초
-    refresh-expiration-time: 604800000  # 7일 = 7 * 24 * 60 * 60 * 1000 밀리초
+    access-expiration-time: 600000      # 10 분
+    refresh-expiration-time: 604800000  # 7 일
 
-#cloud:
-#  aws:
-#    credentials:
-#      instance-profile: true
-#      secret-key: ${AWS_SECRET_KEY}
-#      access-key: ${AWS_ACCESS_KEY}
-#    region:
-#      static: ap-northeast-2
-#      auto: false
-#    stack:
-#      auto: false
-#    s3:
-#      bucket: ${AWS_BUCKET}
+#   필요한 경우 Redis·MongoDB·AWS 설정은 주석 해제 후 사용
+# spring:
+#   data:
+#     redis:
+#       host: ${REDIS_HOST}
+#       port: 6379
+#   cloud:
+#     aws:
+#       ...
 
 logging:
   level:
